completed quality statistics and what-is sections

--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,9 @@
     <!-- Styles -->
     <link rel="stylesheet" href="./css/styles.min.css">
     <!-- Fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@500&display=swap" rel="stylesheet">
     <!-- tiny slider -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.4/tiny-slider.css">
 </head>
@@ -129,6 +131,117 @@
                         Рекламна площадка Диплекс.в мережі розроблено власний цифровий алгоритм розміщення, 
                         за технологією блокчейн, що не має аналогів на ринку. За допомогою нашої технології 
                         рекламодавці взаємодіють з активною та зацікавленою аудиторією.
+                    </p>
+                </div>
+            </div>
+        </section>
+        <section class="statistics">
+            <h2 class="visually-hidden">statistics crypto</h2>
+            <div class="container">
+                <h3 class="statistics-title lng-statistics-title">Статистика</h3>
+                <ul class="statistics-galary">
+                    <li class="statistics-galary__card">
+                        <div class="card-text">
+                            <h4>2 754</h4>
+                            <span class="lng-statistics-card1">Завантажено гаманців</span>
+                        </div>
+                        <img src="./img/statistics-image1.png" alt="man-with-computer">
+                    </li>
+                    <li class="statistics-galary__card">
+                        <div class="card-text">
+                            <h4>9 341</h4>
+                            <span class="lng-statistics-card2">Учасників</span>
+                        </div>
+                        <img src="./img/statistics-image2.png" alt="man-with-computer">
+                    </li>
+                    <li class="statistics-galary__card">
+                        <div class="card-text">
+                            <h4>50 000 000</h4>
+                            <span class="lng-statistics-card3">Випущено монет</span>
+                        </div>
+                        <img src="./img/statistics-image3.png" alt="man-with-computer">
+                    </li>
+                    <li class="statistics-galary__card">
+                        <div class="card-text">
+                            <h4 class="lng-statistics-card4-title">1% за добу</h4>
+                            <span class="lng-statistics-card4">Заробіток</span>
+                        </div>
+                        <img src="./img/statistics-image4.png" alt="man-with-computer">
+                    </li>
+                    <li class="statistics-galary__card">
+                        <div class="card-text">
+                            <h4>+10%</h4>
+                            <span class="lng-statistics-card5">Ріст за добу</span>
+                        </div>
+                        <img src="./img/statistics-image5.png" alt="man-with-computer">
+                    </li>
+                </ul>
+            </div>
+        </section>
+        <section class="what-is">
+            <h2 class="visually-hidden">crypto coin DLX</h2>
+            <div class="container">
+                <div class="what-is__info">
+                    <h3 class="lng-what-is-title">Що таке DLX?</h3>
+                    <p class="lng-what-is-info1">
+                        З кожним роком колесо прогресу обертається ще швидше, інвестування ніколи не 
+                        було простіше і завдяки цифровим валютам і технології блокчейн. Ми є активними 
+                        учасниками ІТ-ринку, тому випускаємо акції компанії в цифровому форматі 
+                        криптовалюти-Diplex Coin DLX.
+                    </p>
+                    <p class="lng-what-is-info2">
+                        Купуючи акції нашої платформи, ви не тільки допомагаєте нам стати кращими, 
+                        але й отримуєте повний доступ до послуг, що надаються нашими сервісами. DLX-це 
+                        цифрова валюта, своєрідне "паливо" для роботи наших сервісів, особливо рекламної 
+                        платформи Diplex. У мережі. Всі розрахунки, що проводяться в екосистемі 
+                        Diplex group, проводяться з використанням власної криптовалюти-рекламодавці 
+                        використовують DLX для оплати послуг сервісу, а користувачі отримують DLX для 
+                        виконання різних завдань Добре, правда?
+                    </p>
+                </div>
+                <img class="what-is__img" src="./img/what-is-planet.png" alt="planet-card">
+            </div>
+        </section>
+        <section class="benefits">
+            <h2 class="visually-hidden">crypto benefits</h2>
+            <div class="container">
+                <h3 class="benefits-title lng-benefits-title">Переваги володіння DLX</h3>
+                <ul class="benefits-list">
+                    <li class="benefits-list__item">
+                        <span class="lng-benefits-list__item1-titile">Безопастность и контроль</span>
+                        <p class="lng-benefits-list__item1-info">Ваши средства защищены криптовалютой DIPLEX на блокчейне.</p>
+                        <img src="./img/benefits-card1.png" alt="statistics-diagram">
+                    </li>
+                    <li class="benefits-list__item">
+                        <span class="lng-benefits-list__item2-titile">Працює завжди і скрізь</span>
+                        <p class="lng-benefits-list__item2-info">DLX працює завжди, навіть у свята! Цілодобова підтримка.</p>
+                        <img src="./img/benefits-card2.png" alt="statistics-website">
+                    </li>
+                    <li class="benefits-list__item">
+                        <span class="lng-benefits-list__item3-titile">Міжнародні платежі</span>
+                        <p class="lng-benefits-list__item3-info">1000 транзакцій на секунду, відсутність комісій, перекази без обмежень.</p>
+                        <img src="./img/benefits-card3.png" alt="statistics-pay-card">
+                    </li>
+                </ul>
+            </div>
+        </section>
+        <section class="quality">
+            <div class="container">
+                <div class="quality-servicse">
+                    <span class="lng-quality-servicse__title">Отримайте високу якість послуг за допомогою Diplex Group.</span>
+                    <p class="lng-quality-servicse__info">Заробляйте гроші, підтримуючи нашу блокчейн-мережу. Зберігайте DLX на виділеному гаманці 
+                        і отримуйте винагороду-зароблені монети можна "чеканити" (PoS), забезпечуючи таким чином 
+                        збільшення обсягу DLX, що зберігаються, до 1% на добу завдяки заданому алгоритму!
+                    </p>
+                    <img src="./img/quality-servise.png" alt="man-with-diagram">
+                </div>
+                <div class="quality-pos">
+                    <img src="./img/quality-pos.png" alt="upped-statistics-diagram">
+                    <span class="lng-quality-pos__title">Що таке Proof-of-Stake (PoS)?</span>
+                    <p class="lng-quality-pos__info">Це один із видів майнінгу (PoS – підтвердження частки), в якому використовується 
+                        алгоритм розподілу монет у мережі. У процесі майнінгу (у гонитві за людьми) ви отримуєте 
+                        винагороду у вигляді додаткових монет. Ідея proof-of-stake полягає у вирішенні проблеми 
+                        proof-of-work, пов'язаної з великими енергетичними витратами та фінансовими інвестиціями.
                     </p>
                 </div>
             </div>
