fixed adaptive for event-slider

--- a/src/contacts.html
+++ b/src/contacts.html
@@ -36,7 +36,7 @@
                         <a href="#" class="lng-nav-3">Навчання</a>
                     </li>
                     <li class="header-nav__list-item">
-                        <a href="#" class="lng-nav-4">Контакти</a>
+                        <a href="contacts.html" class="lng-nav-4">Контакти</a>
                     </li>
                 </ul>
             </nav>
